--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "",
+    "password": "anjayable14",
     "database": "challenge_chap9_db",
     "host": "localhost",
     "dialect": "postgres"
