--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-challenge",
   "version": "1.0.0",
   "description": "challenge-chapter-9",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "author": "group-2",
   "license": "ISC",
