--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "build": "sequelize db:migrate --env production"
+    "build": "sequelize db:migrate"
   },
   "author": "group-2",
   "license": "ISC",
