--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "build": "sequelize db:migrate"
+    "start": "node app.js"
   },
   "author": "group-2",
   "license": "ISC",
